# nlpo3

./: .gitignore  CITATION.cff  Cargo.toml  MANIFEST.in  README.md  build-wheels.sh  build-wheels.sh-old  debug.py  pyproject.toml  pyproject.toml-old  setup.py
.github/workflows/: build-python-wheels.yml  codeql-analysis.yml  m1.yml  test-mac-m1.yml  test-main-lib.yml  test-nlpo3-cli.yml  test-nlpo3-python.yml  test.yml  wheels.yml
build_tools/github/: build_source.sh  check_build_trigger.sh
nlpo3-cli/: Cargo.toml  README.md
nlpo3-cli/src/: cli.yaml  main.rs
nlpo3-nodejs/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
nlpo3-nodejs/nlpo3/: index.ts  rust_mod.d.ts
nlpo3-nodejs/src/: lib.rs
nlpo3-python/: CITATION.cff  Cargo.toml  MANIFEST.in  README.md  build_wheels_local_macos.sh  build_wheels_local_manylinux.sh  build_wheels_macos_local.sh  build_wheels_manylinux_local.sh  pyproject.toml  setup.cfg  setup.py
nlpo3-python/nlpo3/: __init__.py  _nlpo3_python_backend.pyi  py.typed
nlpo3-python/notebooks/: nlpo3_segment_benchmarks.ipynb
nlpo3-python/src/: lib.rs
nlpo3-python/tests/: __init__.py  test_tokenize.py
nlpo3-python/tests/data/: test_dict.txt
nodejs_binding/: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
nodejs_binding/oxidized_nodejs_thainlp/: index.ts  rust_mod.d.ts
nodejs_binding/src/: lib.rs
notebooks/: oxidized_segment_benchmarks.ipynb
oxidized_thainlp/: __init__.py
python_binding/: Cargo.toml  MANIFEST.in  pyproject.toml  setup.py  words_th.txt
python_binding/nlpo3/: __init__.py
python_binding/oxidized_thainlp/: __init__.py
python_binding/src/: lib.rs
python_binding/src/tokenizer/: newmm_custom.rs  tcc_custom.rs  tokenizer_trait.rs
rust_modules/: Cargo.toml  README.md  pyproject.toml
rust_modules/oxidized_thainlp/: __init__.py
rust_modules/src/: NOTE_ON_STRING.md  lib.rs  main.rs  tokenizer.rs
rust_modules/src/fixed_bytes_str/: four_bytes.rs
rust_modules/src/tokenizer/: dict_reader_custom.rs  newmm_custom.rs  tcc_custom.rs  tokenizer_trait.rs  {61, 55, 49, 43, 37, 31, 86, 19, 80, 68,
rust_modules/tests/: test_custom_string.rs  test_tokenizer.rs
src/: NOTE_ON_STRING.md  fixed_bytes_str.rs  four_bytes_str.rs  lib.rs  tokenizer.rs
src/fixed_bytes_str/: four_bytes.rs
src/four_bytes_str/: custom_regex.rs  custom_string.rs
src/tokenizer/: dict_reader.rs  dict_reader_custom.rs  newmm.rs  newmm_custom.rs  tcc.rs  tcc_custom.rs  tcc_rules.rs  tokenizer_trait.rs  trie.rs  trie_char.rs  trie_char_ver.rs  trie_custom.rs
src/tokenizer/tcc/: tcc_rules.rs  tcc_tokenizer.rs
tests/: test_custom_string.rs  test_tokenizer.rs
tests/data/: dict_with_empty_line.txt
