[package]
name = "nlpo3"
version = "1.4.0"
edition = "2018"
license = "Apache-2.0"
authors = ["Thanathip Suntorntip Gorlph", "Arthit Suriyawongkul"]
description = "Thai natural language processing library, with Python and Node bindings"
categories = ["text-processing"]
keywords = ["thai", "tokenizer", "nlp", "word-segmentation"]
homepage = "https://github.com/PyThaiNLP/nlpo3/"
repository = "https://github.com/PyThaiNLP/nlpo3/"
documentation = "https://github.com/PyThaiNLP/nlpo3/blob/main/README.md"
readme = "README.md"
exclude = [
    ".gitignore",
    ".github/*",
    "build_tools/*",
    "tests/*",
    "nlpo3-cli/*",
    "nlpo3-nodejs/*",
    "nlpo3-python/*",
    "words_th.txt",
]

[profile.release]
lto = true
codegen-units = 1

[lib]
path = "src/lib.rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included.
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.93"
binary-heap-plus = "0.5.0"
bytecount = "0.6.8"
lazy_static = "1.5.0"
rayon = "1.10.0"
regex = "1.11.1"
rustc-hash = "1.1.0"
regex-syntax = "0.6.29"

[[test]]
name = "basic"
path = "tests/test_tokenizer.rs"
test = true
