[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "pythainlp-rust-modules"
version = "1.0.0"
authors = ["Thanathip Suntorntip", "Arthit Suriyawongkul", "Wannaphong Phatthiyaphaibun"]
description = "Thai Natural Language Processing in Rust, with Python-binding"
readme = "README.md"
repository = "https://github.com/PyThaiNLP/oxidized-thainlp"
homepage = "https://github.com/PyThaiNLP/oxidized-thainlp"
license = "Apache-2.0"
keywords = [
    "thai",
    "tokenizer",
    "nlp",
    "rust",
    "pythainlp",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: Thai",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "*"
wheel = "*"
pytest-runner = "*"
maturin = "*"
