[package]
name = "nlpo3-cli"
version = "0.1.0"
edition = "2018"
authors = ["Vee Satayamas <5ssgdxltv@relay.firefox.com>"]
description = "Command line interface for nlpO3, a Thai natural language processing library"
documentation = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-cli/README.md"
homepage = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-cli/"
repository = "https://github.com/PyThaiNLP/nlpo3/"
readme = "README.md"
keywords = ["thai", "tokenizer", "nlp", "word-segmentation", "cli"]
categories = ["text-processing"]
license = "Apache-2.0"

[[bin]]
name = "nlpo3"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.0-beta.2" }
nlpo3 = { version = "1.2.0" }
