[package]
name = "nlpo3-cli"
version = "0.2.1-dev"
edition = "2018"
license = "Apache-2.0"
authors = ["Vee Satayamas <5ssgdxltv@relay.firefox.com>"]
description = "Command line interface for nlpO3, a Thai natural language processing library"
categories = ["text-processing", "command-line-utilities"]
keywords = ["thai", "tokenizer", "nlp", "word-segmentation", "cli"]
homepage = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-cli/"
repository = "https://github.com/PyThaiNLP/nlpo3/"
documentation = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-cli/README.md"
readme = "README.md"

[[bin]]
name = "nlpo3"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
nlpo3 = "1.4.0"
