[package]
name = "nlpo3-nodejs"
version = "1.0.0"
edition = "2018"
license = "Apache-2.0"
authors = ["Thanathip Suntorntip Gorlph"]
exclude = ["index.node"]
keywords = ["thai", "tokenizer", "nlp", "word-segmentation"]
categories = ["text-processing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.6"
lazy_static = "1.5.0"
nlpo3 = "1.4.0"

[dependencies.neon]
version = "0.22.6"
default-features = false
features = ["napi-6"]
