[package]
name = "nlpo3-nodejs"
version = "1.0.0"
edition = "2018"
license = "Apache-2.0"
authors = ["Thanathip Suntorntip Gorlph"]
description = "Node binding for nlpO3 Thai language processing library"
categories = ["text-processing"]
keywords = ["thai", "tokenizer", "nlp", "word-segmentation"]
homepage = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-nodejs/"
repository = "https://github.com/PyThaiNLP/nlpo3/"
documentation = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-nodejs/README.md"
readme = "README.md"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.6"
lazy_static = "1.5.0"
nlpo3 = "1.4.0"

[dependencies.neon]
version = "1.0.0"
default-features = false
features = ["napi-6"]
