[package]
name = "nlpo3-python"
version = "1.3.1-dev"
edition = "2018"
license = "Apache-2.0"
license-file = "LICENSE"
authors = ["Thanathip Suntorntip Gorlph"]
description = "Python binding for nlpO3 Thai language processing library"
exclude = ["notebooks"]
keywords = ["thai", "tokenizer", "nlp", "word-segmentation", "python"]
categories = ["text-processing"]

[lib]
name = "_nlpo3_python_backend"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = "0.8.6"
lazy_static = "1.5.0"
nlpo3 = "1.4.0"

[dependencies.pyo3]
version = "0.22.6"
features = ["extension-module"]
