[package]
name = "nlpo3-python"
version = "1.3.1"
edition = "2018"
license = "Apache-2.0"
authors = [
    "Thanathip Suntorntip Gorlph",
    "Arthit Suriyawongkul",
    "Wannaphong Phatthiyaphaibun <wannaphong@yahoo.com>",
]
description = "Python binding for nlpO3 Thai language processing library"
categories = ["text-processing"]
keywords = ["thai", "tokenizer", "nlp", "word-segmentation", "python"]
homepage = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-python"
repository = "https://github.com/PyThaiNLP/nlpo3/"
documentation = "https://github.com/PyThaiNLP/nlpo3/blob/main/nlpo3-python/README.md"
readme = "README.md"
exclude = [".gitignore", ".github/", "notebooks/", "tests/", "*.sh"]

[lib]
name = "_nlpo3_python_backend"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = "0.8.6"
lazy_static = "1.5.0"
nlpo3 = "1.4.0"

[dependencies.pyo3]
version = "0.22.6"
features = ["extension-module"]
