[build-system]
requires = ["setuptools", "setuptools-rust", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlpo3"
version = "1.4.0"
description = "Python binding for nlpO3 Thai language processing library in Rust"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.7"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["thai", "tokenizer", "nlp", "word-segmentation", "pythainlp"]
authors = [
  { name = "Thanathip Suntorntip" },
  { name = "Arthit Suriyawongkul" },
  { name = "Wannaphong Phatthiyaphaibun", email = "wannaphong@yahoo.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Intended Audience :: Developers",
  "Natural Language :: Thai",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-python"
repository = "https://github.com/PyThaiNLP/nlpo3/"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-runner = "*"
wheel = "*"

[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.vscode
  | build
  | dist
)/
'''

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nlpo3"]
exclude = ["notebooks", "tests"]

[[tool.setuptools-rust.ext-modules]]
target = "nlpo3._nlpo3_python_backend"
path = "Cargo.toml"
binding = "PyO3"
strip = "No"
