[metadata]
name = nlpo3
version = 1.3.0
description = Python binding for nlpO3 Thai language processing library
long_description =
    Python binding for nlpO3, a Thai natural language processing library in Rust.

    ## Features

    - Thai word tokenizer
      - use maximal-matching dictionary-based tokenization algorithm and honor Thai Character Cluster boundaries
      - use user-supplied dictionary
      - 2.5x faster than similar pure Python implementation

    ## Install

    ```bash
    pip install nlpo3
    ```

    ## Usage

    Load file `path/to/dict.file` to memory and assigned it with name `custom_dict`.
    Then tokenize a text with `custom_dict` dictionary:
    ```python
    from nlpo3 import load_dict, segment

    load_dict("path/to/dict.file", "custom_dict")
    segment("สวัสดีครับ", "custom_dict")
    ```

    it will return a list of strings:
    ```python
    ['สวัสดี', 'ครับ']
    ```
    (result depends on words included in the dictionary)

    For more documentation, go [https://github.com/PyThaiNLP/nlpo3](https://github.com/PyThaiNLP/nlpo3)

long_description_content_type = text/markdown
license = Apache-2.0
keywords =
    thai
    tokenizer
    nlp
    word-segmentation
    pythainlp
author = Thanathip Suntorntip, Arthit Suriyawongkul, Wannaphong Phatthiyaphaibun
author_email = wannaphong@yahoo.com
url = https://github.com/PyThaiNLP/nlpo3/
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: Thai
    Topic :: Text Processing :: Linguistic
    Topic :: Software Development :: Libraries :: Python Modules
#obsoletes = pythainlp-rust-modules

[options]
python_requires = >=3.6
include_package_data = True
packages = nlpo3
zip_safe = False
