[package]
name = "oxidized-nodejs-thainlp"
version = "0.1.0"
edition = "2018"
license = "Apache"
authors = ["Thanathip Suntorntip Gorlph"]
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
ahash = "0.7.2"
pythainlp-rust-modules = { path = ".." }

[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-6"]
