[package]
name = "oxidized-nodejs-thainlp"
version = "0.1.0"
edition = "2018"
license = "Apache"
authors = ["Thanathip Suntorntip Gorlph"]
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
pythainlp-rust-modules = { path = ".." }

[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-6"]
