[package]
name = "nlpo3-nodejs"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
authors = ["Thanathip Suntorntip Gorlph"]
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
nlpo3 = { path = ".." }

[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-6"]
