
[package]
name = "oxidized-thainlp"
version = "1.1.0"
edition = "2018"
authors = ["Thanathip Suntorntip Gorlph"]

[lib]
name = "oxidized_thainlp"
path = "src/lib.rs"# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
lazy_static = "1.4.0"
ahash = "0.7.2"
pythainlp-rust-modules = { path = ".." }