[package]
name = "nlpo3-python"
version = "1.1.0"
edition = "2018"
license = "Apache"
authors = ["Thanathip Suntorntip Gorlph"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = "0.7.2"
lazy_static = "1.4.0"
nlpo3 = { path = ".." }

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
